human_written_tests/WebAssembly/processed_control_flow_validation/test_if_116.wast
(assert_malformed
  (module quote "(func (if i32.const 0 (then) (else)))")
  "unexpected token"
)